refactor test module